# lab2

./: CMakeLists.txt  main.cpp
planet/: planet.cpp  planet.h
product/: CMakeLists.txt  product.cpp  product.h
